--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+
 * {
+    font-family: Roboto, sans-serif;
     margin: 0;
     padding: 0;
     text-align: center;
+}
+
+body {
+    background-color: #161b22;
+}
+
+button {
+    margin: 0;
+    padding: 0;
+    background-color: white;
+    border: none;
+    cursor: pointer;
 }
 
 .container {
@@ -16,8 +31,18 @@
 
 .box {
     border: 1px solid black;
+    background-color: white;
 }
 
 .reset-btn {
-    text-align: center;
+    margin: 20px;
+    padding: 10px 35px;
+    border-radius: 8px;
+    background-color: #1d69e0;
+    color: white;
+    font-size: 40px;
+}
+
+.reset-btn:hover {
+    background-color: #0e3068;
 }
